BATM-8805: support for QCAD (#1186)
* BATM-8637: added tests for EthereumExtension.createRateSource

* BATM-8805: support for QCAD (Canadian Dollar Stablecoin) for demo use

* BATM-8805: support for QCAD (Canadian Dollar Stablecoin) via Infura Wallet